# blockblog

./: .gitignore  Cargo.toml  justfile
example-project/input/: banner.yml  index.yml  loops.yml
example-project/input/games/: mr-final-boss.yml
input/: index.md
output/: index.html
src/: generator.rs  main.rs
src/data/: block_builder.rs  blocks.rs  colors.rs  error.rs  mod.rs  templates.rs
